--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.inputsystem": "1.6.3",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
