--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,7 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
+
+# Ignore auto-generted files based on extension
+Leggy_FMOD/._*
+Leggy_FMOD/.cache/*
